# MP2D

./: CMakeLists.txt  LICENSE  MP2D.cpp  MP2D.h  Main.cpp  Makefile  README.md  README.txt  main.cpp
EXAMPLES/: M1_Benzene_Dimer_Unrecognized_Atom.in  M1_Benzene_dimer_TEST.in  M1_Benzene_dimer_TEST_doesnt_work.in  SSI-035CYS-038CYS-1-dimer_Incorrect_Input_Format.in  SSI-035CYS-038CYS-1-dimer_Incorrect_Input_Format.out  SSI-035CYS-038CYS-1-dimer_TEST.in  SSI-035CYS-038CYS-1-dimer_TEST.out  ethyne.in  ethyne.out  water_dimer.in  water_dimer.out
EXAMPLES/mp2d/: benzene_dimer.out  benzene_dimer.xyz  ethyne.out  ethyne.xyz  water_dimer.out
EXAMPLES/scs-mp2d/: benzene.in  benzene.out  benzene.xyz
EXAMPLES/scsm-mp2d/: benzene.scsmp2d  run_scs-mp2d.sh
